home/wetherflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherflow-mqtt
  namespace: home
  labels:
    app: weatherflow-mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weatherflow-mqtt
  template:
    metadata:
      labels:
        app: weatherflow-mqtt
    spec:
      containers:
        - name: weatherflow-mqtt
          image: ghcr.io/hacking-robots-and-beer/wetherflow:sha-9c953c4
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
