home/mariadb.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: maria
  namespace: home
spec:
  selector:
    matchLabels:
      app: maria
  serviceName: home
  replicas: 1
  template:
    metadata:
      labels:
        app: maria
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin
        ports:
        - containerPort: 80
          name: http
      - name: maria
        image: mariadb
        ports:
        - containerPort: 3306
          name: http
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: storage
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: maria-storage

---
apiVersion: v1
kind: Service
metadata:
  name: maria
  namespace: home
  annotations:  
    external-dns.alpha.kubernetes.io/hostname: maria.socomp.se
    metallb.universe.tf/address-pool: lan
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: maria
  type: LoadBalancer
