home/mikrotik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mikrotik-exporter
  namespace: home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mikrotik-exporter
  template:
    metadata:
      labels:
        app: mikrotik-exporter
    spec:
      containers:
      - name: mikrotik-exporter
        image: ghcr.io/akpw/mktxp:latest
        ports:
        - containerPort: 49090 
        volumeMounts:
        - name: config
          mountPath: /home/mktxp/mktxp/mktxp.conf
          subPath: mktxp.conf
        - name: config-disk
          mountPath: /home/mktxp/mktxp
      securityContext:
        fsGroup: 1000
      volumes:
        - name: config
          configMap:
            name: mktxp
        - name: config-disk
          persistentVolumeClaim:
            claimName: mikrotik-config

---
apiVersion: v1
kind: Service
metadata:
  name: mikrotik-exporter
  namespace: home
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '49090'
spec:
  type: ClusterIP
  selector:
    app: mikrotik-exporter  
  ports:
  - port: 49090
---
