home/mqqt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto
        ports:
        - containerPort: 1883
        - containerPort: 9001
        volumeMounts:
        - mountPath: /mosquitto/config/mosquitto.conf
          subPath: mosquitto.conf
          name: config

      volumes:
      - name: config
        configMap:
          name: mosquitto-config

---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-mqtts
  namespace: home
spec:
  type: ClusterIP
  selector:
    app: mosquitto  
  ports:
  - port: 1883
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mosquitto
  name: mosquitto-lb
  namespace: home
spec:
  ports:
  - name: mqtt
    port: 1883
    protocol: TCP
    targetPort: 1883
  selector:
    app: mosquitto
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mqqt.socomp.se
    metallb.universe.tf/address-pool: lan
  labels:
    app: mosquitto
  name: mosquitto-node
  namespace: home
spec:
  ports:
  - name: mqtt
    port: 1883
    protocol: TCP
    targetPort: 1883
  selector:
    app: mosquitto
  type: LoadBalancer
