home/plex.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plex
  labels:
    kubernetes.io/metadata.name: metallb-system
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
---
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
  namespace: plex
spec:
  selector:
    matchLabels:
      app: plex
  serviceName: plex
  replicas: 1
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: plexinc/pms-docker
        ports:

        - containerPort: 32400
          name: http
        - containerPort: 3005
        - containerPort: 3324
        - containerPort: 32469
        - containerPort: 1900
          protocol: UDP
        - containerPort: 32410
          protocol: UDP
        - containerPort: 32412
          protocol: UDP
        - containerPort: 32413
          protocol: UDP
        - containerPort: 32414
          protocol: UDP
        volumeMounts:
        - mountPath: /data
          name: nfs-vol
        - mountPath: /config/
          name: config
        - name: dshm
          mountPath: /transcode
      volumes:
      - name: nfs-vol
        nfs:
          server: 10.0.0.10
          path: /mnt/disk/media/
      - name: config
        persistentVolumeClaim:
          claimName: plex-config
      - name: dshm
        emptyDir: {}




---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
  annotations:  
    external-dns.alpha.kubernetes.io/hostname: plex.socomp.se
    metallb.universe.tf/address-pool: lan
spec:
  ports:
  - name: http
    port: 32400
    protocol: TCP
  - name: http2
    port: 3005
    protocol: TCP
  - name: port1
    port: 3324
    protocol: TCP
  - name: sync
    port: 32469
    protocol: TCP
  - name: stream0
    port: 1900
    protocol: UDP
  - name: stream1
    port: 32410
    protocol: UDP
  - name: stream2
    port: 32412
    protocol: UDP
  - name: stream3
    port: 32413
    protocol: UDP
  - name: stream4
    port: 32414
    protocol: UDP
  selector:
    app: plex
  type: LoadBalancer
---
