home/daluge.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deluge
  labels:
    kubernetes.io/metadata.name: metallb-system
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: deluge
  namespace: deluge
spec:
  selector:
    matchLabels:
      app: deluge
  serviceName: deluge
  replicas: 1
  template:
    metadata:
      labels:
        app: deluge
    spec:
      containers:
      - name: deluge
        image: lscr.io/linuxserver/deluge:latest
        ports:
        - containerPort: 8112
          name: http
        volumeMounts:
        - mountPath: /downloads/
          name: nfs-vol
        - mountPath: /config/
          name: config-storage

        readinessProbe:
          httpGet:
            path: /
            port: http

      volumes:
      - name: nfs-vol
        nfs:
          server: 10.0.0.10
          path: /mnt/disk/media/
      - name: config-storage
        persistentVolumeClaim:
          claimName: deluge-config

---
apiVersion: v1
kind: Service
metadata:
  name: deluge
  namespace: deluge
spec:
  ports:
  - name: http
    port: 8112
    protocol: TCP
    targetPort: 8112
  selector:
    app: deluge
  type: ClusterIP
---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: home-ollebo-com
    external-dns.alpha.kubernetes.io/hostname: deluge.socomp.se
    external-dns.alpha.kubernetes.io/target: lb.v2.socomp.se
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
  generation: 3
  name: deluge
  namespace: deluge
spec:
  rules:
  - host: deluge.socomp.se
    http:
      paths:
      - backend:
          service:
            name: deluge
            port:
              number: 8112
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - deluge.socomp.se
    secretName: deluge-tls
