home/frigate-utomhus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frigate
  labels:
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: frigate-utomhus
  namespace: frigate
spec:
  selector:
    matchLabels:
      app: frigate-utomhus
  serviceName: frigate-utomhus
  replicas: 0
  template:
    metadata:
      labels:
        app: frigate-utomhus
    spec:
      containers:
      - name: frigate
        image: ghcr.io/blakeblackshear/frigate:stable-rk
        securityContext:
          privileged: true
        ports:
        - containerPort: 8971
          name: https
        - containerPort: 5000
          name: http-open
        - containerPort: 8554
          name: rtsp
        volumeMounts:
        - mountPath: /media/frigate
          name: nfs-vol
        - mountPath: /config/config.yml
          subPath: config.yml
          name: config
        - mountPath: /config/
          name: config-storage
        - name: dshm
          mountPath: /dev/shm
        - name: coral-dev
          mountPath: /dev/bus/usb
        readinessProbe:
          httpGet:
            path: /
            port: http-open
      nodeSelector:
        kubernetes.io/hostname: turing2
      volumes:
      - name: nfs-vol
        nfs:
          server: 10.0.0.10
          path: /mnt/disk/media/Frigate/utomhus
      - name: config
        configMap:
          name: frigate-utomhus-config
      - name: coral-dev
        hostPath:
          path: /dev/bus/usb
      - name: dshm
        emptyDir: {}
      - name: config-storage
        persistentVolumeClaim:
          claimName: frigate-utomhus-config
---
apiVersion: v1
kind: Service
metadata:
  name: frigate-utomhus
  namespace: frigate
  annotations:
    external-dns.alpha.kubernetes.io/hostname: frigate-utomhus.v2.local
    metallb.universe.tf/address-pool: dmz
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  - name: http-open
    port: 5000
    protocol: TCP
    targetPort: 5000
  - name: rtsp
    port: 8554
    protocol: TCP
    targetPort: 8554
  selector:
    app: frigate-utomhus
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
  name: frigate-utomhus
  namespace: frigate
spec:
  rules:
  - host: frigate-utomhus.v2.local
    http:
      paths:
      - backend:
          service:
            name: frigate-utomhus
            port:
              number: 5000
        path: /
        pathType: Prefix
