home/ha.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
        - name: homeassistant
          # https://hub.docker.com/r/pihole/pihole/tags
          image: homeassistant/home-assistant
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8123
              protocol: TCP
          volumeMounts:
             - name: homeassistant
               mountPath: /config
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 2Gi
              cpu: 1000m
      volumes:
        - name: homeassistant
          persistentVolumeClaim:
            claimName: homeassistant-longhorn
        #- name: dev-zwave
        #  hostPath:
        #    path: /dev/usbzwave
        #- name: dev-insteon
        #  hostPath:
        #    path: /dev/usbinsteon


---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homeassistant
  name: homeassistant
  namespace: home
spec:
  ports:
  - name: homeassistant
    port: 8123
    protocol: TCP
    targetPort: 8123
  selector:
    app: homeassistant
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
  name: ha
  namespace: home
spec:
  rules:
  - host: ha.v2.local
    http:
      paths:
      - backend:
          service:
            name: homeassistant
            port:
              number: 8123
        path: /
        pathType: Prefix
