home/influxdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: home
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
        - name: influxdb
          image: influxdb:2.7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8086
              protocol: TCP
          volumeMounts:
            - name: influxdb
              mountPath: /var/lib/influxdb2
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 2Gi
              cpu: 1000m
      volumes:
        - name: influxdb
          persistentVolumeClaim:
            claimName: influxdb-longhorn
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: influxdb
  name: influxdb
  namespace: home
spec:
  ports:
    - name: influxdb
      port: 8086
      protocol: TCP
      targetPort: 8086
  selector:
    app: influxdb
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
  name: influxdb
  namespace: home
spec:
  rules:
    - host: influxdb.v2.local
      http:
        paths:
          - backend:
              service:
                name: influxdb
                port:
                  number: 8086
            path: /
            pathType: Prefix
