home/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
  name: n8n-hrb
  namespace: home
spec:
  rules:
  - host: n8n-hrb.v2.local
    http:
      paths:
      - backend:
          service:
            name: hrb-n8n
            port:
              number: 5678
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
  name: n8n
  namespace: home
spec:
  rules:
  - host: n8n.v2.local
    http:
      paths:
      - backend:
          service:
            name: my-n8n
            port:
              number: 5678
        path: /
        pathType: Prefix
