home/overseerr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: overseerr
  labels:
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: overseerr
  namespace: overseerr
spec:
  selector:
    matchLabels:
      app: overseerr
  serviceName: overseerr
  replicas: 1
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
      - name: overseerr
        image: sctx/overseerr
        ports:
        - containerPort: 5055
          name: http
        volumeMounts:
        - mountPath: /app/config
          name: config-storage

        readinessProbe:
          httpGet:
            path: /
            port: http

      volumes:
      - name: config-storage
        persistentVolumeClaim:
          claimName: overseerr-config

---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: overseerr
spec:
  ports:
  - name: http
    port: 5055
    protocol: TCP
    targetPort: 5055
  selector:
    app: overseerr
  type: ClusterIP
---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: home-ollebo-com
    external-dns.alpha.kubernetes.io/hostname: overseerr.socomp.se
    external-dns.alpha.kubernetes.io/target: lb.v2.socomp.se
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
  generation: 3
  name: overseerr
  namespace: overseerr
spec:
  rules:
  - host: overseerr.socomp.se
    http:
      paths:
      - backend:
          service:
            name: overseerr
            port:
              number: 5055
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - overseerr.socomp.se
    secretName: overseerr-tls
