home/photoprism.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: photoprism
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
  namespace: photoprism
spec:
  selector:
    matchLabels:
      app: photoprism
  serviceName: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
      - name: photoprism
        image: photoprism/photoprism:latest
        ports:
        - containerPort: 2342
          name: http
        volumeMounts:
        - mountPath: /photoprism/import
          name: import
        - mountPath: /photoprism/storage
          name: storage
        - mountPath: /photoprism/originals
          name: nfs-vol
        readinessProbe:
          httpGet:
            path: /api/v1/status
            port: http
      volumes:
      - name: nfs-vol
        nfs:
          server: 10.0.0.10
          path: /mnt/disk/media/Bilder
      - name: import
        nfs:
          server: 10.0.0.10
          path: /mnt/disk/media/photoprism
      - name: storage
        persistentVolumeClaim:
          claimName: photoprism-storage

---
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: photoprism
  annotations:  
    external-dns.alpha.kubernetes.io/hostname: photo.socomp.se
    metallb.universe.tf/address-pool: lan
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: photoprism
  type: LoadBalancer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: photoprism
spec:
  serviceName: "mariadb"
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb  # Ensure this label matches the selector
    spec:
      containers:
        - name: mariadb
          image: mariadb:latest
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
            - name: config-volume
              mountPath: /etc/mysql/conf.d
      volumes:
        - name: config-volume
          configMap:
            name: mariadb-config
  volumeClaimTemplates:
    - metadata:
        name: mariadb-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
    name: mariadb
    namespace: photoprism
spec:
    ports:
    - port: 3306
      targetPort: 3306
    selector:
        app: mariadb
---
---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: home-ollebo-com
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
  generation: 3
  name: photo
  namespace: photoprism
spec:
  rules:
  - host: photo.v2.local
    http:
      paths:
      - backend:
          service:
            name: photoprism
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - photoprism.v2.local
    secretName: photoprism-tls
