home/prowlarr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prowlarr
  labels:
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  selector:
    matchLabels:
      app: prowlarr
  serviceName: prowlarr
  replicas: 1
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:latest
        ports:
        - containerPort: 9696
          name: http
        volumeMounts:
        - mountPath: /config
          name: config-storage

        readinessProbe:
          httpGet:
            path: /
            port: http

      volumes:
      - name: config-storage
        persistentVolumeClaim:
          claimName: prowlarr-config

---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  ports:
  - name: http
    port: 9696
    protocol: TCP
    targetPort: 9696
  selector:
    app: prowlarr
  type: ClusterIP
---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: home-ollebo-com
    external-dns.alpha.kubernetes.io/hostname: prowlarr.socomp.se
    external-dns.alpha.kubernetes.io/target: lb.v2.socomp.se
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
  generation: 3
  name: prowlarr
  namespace: prowlarr
spec:
  rules:
  - host: prowlarr.socomp.se
    http:
      paths:
      - backend:
          service:
            name: prowlarr
            port:
              number: 9696
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prowlarr.socomp.se
    secretName: prowlarr-tls
