home/radaar.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: radarr
  labels:
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  namespace: radarr
spec:
  selector:
    matchLabels:
      app: radarr
  serviceName: radarr
  replicas: 1
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        ports:
        - containerPort: 7878
          name: http
        volumeMounts:
        - mountPath: /downloads/
          name: nfs-vol
        - mountPath: /config
          name: config-storage

        readinessProbe:
          httpGet:
            path: /
            port: http

      volumes:
      - name: config-storage
        persistentVolumeClaim:
          claimName: radarr-config
      - name: nfs-vol
        nfs:
          server: 10.0.0.10
          path: /mnt/disk/media/
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
spec:
  ports:
  - name: http
    port: 7878
    protocol: TCP
    targetPort: 7878
  selector:
    app: radarr
  type: ClusterIP
---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: home-ollebo-com
    external-dns.alpha.kubernetes.io/hostname: radarr.socomp.se
    external-dns.alpha.kubernetes.io/target: lb.v2.socomp.se
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
  generation: 3
  name: radarr
  namespace: radarr
spec:
  rules:
  - host: radarr.socomp.se
    http:
      paths:
      - backend:
          service:
            name: radarr
            port:
              number: 7878
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - radarr.socomp.se
    secretName: radarr-tls
