home/zigbeeToMqqt.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zigbee-mqtt
  namespace: home
spec:
  selector:
    matchLabels:
      app: zigbee-mqtt
  serviceName: zigbee-mqtt
  replicas: 1
  template:
    metadata:
      labels:
        app: zigbee-mqtt
    spec:
      containers:
      - name: zigbee-mqtt
        image: ghcr.io/koenkk/zigbee2mqtt
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /app/data
          name: data
        - mountPath: /app/data/config/configuration.yaml
          subPath: configuration.yaml
          name: config
        - name: dev
          mountPath: /dev/bus/usb
      nodeSelector:
        coral: "yes"
      volumes:
      - name: config
        configMap:
          name: mqqt-config
      - name: dev
        hostPath:
          path: /dev/bus/usb
      - name: dshm
        emptyDir: {}
      - name: data
        persistentVolumeClaim:
          claimName: mqqt-data
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee
  namespace: home
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: zigbee-mqtt
  type: ClusterIP
---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
  name: zigbee
  namespace: home
spec:
  rules:
  - host: zigbee.v2.local
    http:
      paths:
      - backend:
          service:
            name: zigbee
            port:
              number: 8080
        path: /
        pathType: Prefix
